# Haskell-Algorithms

./: .gitignore  README.md  h-algo.cabal  haskell-algorithms.cabal  main  main.hi  main.hs
Algo/: Hash.hs  Insertion.hs
Benchmarks/: Tools.hs  Trie.hs
Data/: AdvTree.hs  MaxHeap.hs  MinHeap.hs  RBTree.hs  Tree.hs  Trie.hs  USet.hs
Data/Trie/: Internal.hs  Strict.hs
Examples/: MinHeap.hs  Trie.hs  USet.hs
Structs/: Heap.hs  Tree.hs  USet.hs
Tests/: Test.hs  Tools.hs  Tree.hs  Trie.hs
Tests/Trie/: Insert.hs  Lookup.hs
Utils/: Expiring.hs
