cabal-version: 2.2


-- package information
name:               h-algo
version:            0.1.0.0
synopsis:           (H)askell (Algo)rithms
description:        this is a placeholder description
author:             Rose<https://github.com/Xenovia02>
maintainer:         Rose<https://github.com/Xenovia02>
category:           General
license:            MIT
license-file:       LICENSE
extra-source-files: README.md

-- build information
build-type:         Simple


source-repository head
    type:
        git
    location:
        https://github.com/Xenovia02/Haskell-Algorithms


library
    exposed-modules:
        Algo.Hash,
        Algo.Insertion,
        -- Data.AdvTree,
        Data.MaxHeap,
        Data.MinHeap,
        Data.Tree,
        Data.Trie.Strict
    build-depends:
        base == 4.*,
        array
    default-language:
        Haskell2010
    ghc-options:
        -Wall
        -Werror
        -Wextra
        -fhide-source-paths



executable Trie-Example
    main-is: Examples/Trie.hs
    other-modules:
        Data.Trie.Strict
    ghc-options:
        -Wall
        -Werror
        -Wextra
        -Wno-unused-do-bind
        -fhide-source-paths
    build-depends:
        base == 4.*,
        array,

        h-algo
    default-language: Haskell2010
