cabal-version: 2.2


-- package information
name:               h-algo
version:            0.1.0.0
synopsis:           (H)askell (Algo)rithms
description:        this is a placeholder description
author:             Rose<https://github.com/Xenovia02>
maintainer:         Rose<https://github.com/Xenovia02>
category:           General
license:            MIT
license-file:       LICENSE
extra-source-files: README.md

-- build information
build-type:         Simple


source-repository head
    type:
        git
    location:
        https://github.com/Xenovia02/Haskell-Algorithms


common general
    build-depends:
        base == 4.*
        -- deepseq
    default-language:
        Haskell2010
    other-extensions:
        BangPatterns,
        Rank2Types
        -- DeriveGeneric
    ghc-options:
        -O0
        -fhide-source-paths
        -fshow-warning-groups
        -Wall
        -Wcompat
        -Wno-unused-do-bind
        -Werror
        -Wwarn=unused-imports
    


library
    import: general
    exposed-modules:
        Algo.Hash,
        Algo.Insertion,
        -- Data.AdvTree,
        Data.MaxHeap,
        Data.MinHeap,
        Data.Tree,
        Data.Trie
    build-depends:
        array



executable Trie-Profile
    import: general
    main-is: Benchmarks/Trie.hs
    other-modules:
        -- Benchmarks.Tools
        Data.Trie
    build-depends:
        array,
        time,
        h-algo


test-suite Trie-Test-Insert
    import: general
    type: exitcode-stdio-1.0
    main-is: Tests/Trie/Insert.hs
    other-modules:
        Tests.Tools,
        Data.Trie
    build-depends:
        array,
        h-algo


test-suite Trie-Test-Lookup
    import: general
    type: exitcode-stdio-1.0
    main-is: Tests/Trie/Lookup.hs
    other-modules:
        Tests.Tools,
        Data.Trie
    build-depends:
        array,
        h-algo


benchmark Trie-bm
    import: general
    type: exitcode-stdio-1.0
    main-is: Benchmarks/Trie.hs
    build-depends:
        time,
        h-algo
